# python-project-template

./: README.md  pyproject.toml
src/my_project/: __main__.py  adder.py
tests/: test_adder.py
